# learn_robot_localization

./: .clang-format  .gitignore  README.md  lidar_localization.json
src/lidar_localization/: CMakeLists.txt  package.xml
src/lidar_localization/cmake/: g2o.cmake
src/lidar_localization/config/fornt_end/: config.yaml
src/lidar_localization/config/front_end/: config.yaml
src/lidar_localization/include/front_end/: front_end.hh  front_end_flow.hh
src/lidar_localization/include/global_defination/: global_defination.h.in
src/lidar_localization/include/lidar_localization/front_end/: front_end_flow.hpp
src/lidar_localization/include/lidar_localization/lidar_undistortion/: lidar_undstortion.hh
src/lidar_localization/include/lidar_localization/publisher/: imu_publisher.hpp  key_frame_publisher.hpp  key_frames_publisher.hpp
src/lidar_localization/include/lidar_localization/sensor_data/: key_frame.hpp  pose_data.hpp  velocity_data.hpp
src/lidar_localization/include/lidar_localization/subscriber/: key_frame_subscriber.hpp  key_frames_subscriber.hpp  odom_subscriber.hpp
src/lidar_localization/include/publisher/: cloud_pub.hh  odom_pub.hh
src/lidar_localization/include/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  velocity_data.hpp
src/lidar_localization/include/subscriber/: cloud_sub.hh  gnss_sub.hh  imu_sub.hh  velocity_sub.hh
src/lidar_localization/include/tf/: tf_listener.hh
src/lidar_localization/launch/: front_end.launch
src/lidar_localization/rviz/: test_frame.rviz
src/lidar_localization/slam_data/key_frames/: key_frame_0.pcd
src/lidar_localization/src/: front_end_node.cc  front_end_node.cpp  test_frame_node.cc
src/lidar_localization/src/front_end/: front_end.cc  front_end_flow.cc  front_end_flow.cpp
src/lidar_localization/src/lidar_undistortion/: lidar_undistortion.cpp
src/lidar_localization/src/publisher/: cloud_pub.cc  key_frame_publisher.cpp  key_frames_publisher.cpp  odom_pub.cc
src/lidar_localization/src/sensor_data/: cloud_data.hpp  gnss_data.cc  key_frame.cpp  pose_data.cpp  velocity_data.cc  velocity_data.cpp
src/lidar_localization/src/subscriber/: cloud_sub.cc  gnss_sub.cc  imu_sub.cc  key_frame_subscriber.cpp  key_frames_publisher.cpp  odometry_subscriber.cpp  velocity_sub.cc
src/lidar_localization/src/tf/: tf_listener.cc
src/lidar_localization/src/tools/: file_manager.cpp
(+32 files in other folders)
